Fix hover state on mobile

--- a/src/styles/Index.module.scss
+++ b/src/styles/Index.module.scss
@@ -18,7 +18,7 @@
   text-underline-position: under;
   transition: text-decoration .1s;
 
-  @media (hover: hover) {
+  @media (hover: hover) and (pointer: fine) {
     &:hover {
       text-decoration-color: transparent;
     }
